[package]
name = "buffer-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.3"

[dev-dependencies]
bytemuck = { version = "1.14.3", features = ["derive"] }

[features]
read = []

